[metadata]
name = browbeat
summary = OpenStack Performance Tooling
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.browbeatproject.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

#[files]
#packages =
#    browbeat

#[build_sphinx]
#source-dir = doc/source
#build-dir = doc/build
#all_files = 1

#[upload_sphinx]
#upload-dir = doc/build/html

#[compile_catalog]
#directory = browbeat/locale
#domain = browbeat

#[update_catalog]
#domain = browbeat
#output_dir = browbeat/locale
#input_file = browbeat/locale/browbeat.pot

#[extract_messages]
#keywords = _ gettext ngettext l_ lazy_gettext
#mapping_file = babel.cfg
#output_file = browbeat/locale/browbeat.pot
