[metadata]
name = browbeat
summary = OpenStack Performance Tooling
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.browbeatproject.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[files]
data_files =
    usr/local/share/ansible/roles/browbeat-metadata/ = ansible/gather/roles/*
    usr/local/share/ansible/roles/browbeat/ = ansible/install/roles/*
    usr/local/share/ansible/roles/browbeat/ = ansible/oooq/roles/*
    usr/local/share/ansible/roles/browbeat/browbeat/vars/ = ci-scripts/config/tripleo/oooq-browbeat-role/*
    usr/local/share/ansible/roles/browbeat/browbeat/filter_plugins = ansible/install/filter_plugins/*
    playbooks = ansible/oooq/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
